--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
 
-
-
   <div class="panels">
     <div class="panel panel1">
       <p>Hey</p>
@@ -38,7 +36,7 @@
     </div>
   </div>
 
-<script src="./app.js"</script>
+<script src="./app.js"></script>
 
 </body>
 </html>
